update ui & add call api

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Roboto", sans-serif;;
+}
+
 .button {
    @apply w-full px-2 text-sm md:px-4 md:text-base font-bold bg-white transition-all text-slate-900 h-[52px] rounded-2xl lg:px-7 lg:text-xl lg:w-auto;
 
